<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="150dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="120dp"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_number_player"
        android:textColor="@android:color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/btn_two_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/number_players_two"
        android:text="@string/two_players"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/btn_three_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
		android:drawableLeft="@drawable/number_players_three"
        android:text="@string/three_players"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/btn_four_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/number_players_two"
        android:text="@string/four_players"
        android:textColor="@android:color/white" />

</LinearLayout>