<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_number_player"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/btn_two_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/number_players_two"
            android:drawablePadding="8dp"
            android:background="@drawable/chip_button_selector"
            android:text="@string/two_players"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/btn_three_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/number_players_three"
            android:drawablePadding="8dp"
            android:background="@drawable/chip_button_selector"
            android:text="@string/three_players"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/btn_four_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/number_players_four"
            android:drawablePadding="8dp"
            android:background="@drawable/chip_button_selector"
            android:text="@string/four_players"
            android:textAlignment="center"
            android:textColor="@android:color/black"
           
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>